--- a/css/colors.css
+++ b/css/colors.css
@@ -1,29 +1,121 @@
-/* line 1, ../sass/colors.scss */
+/* line 15, ../sass/colors.scss */
 body {
+  min-height: 100vh;
   margin: 0;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  background-image: linear-gradient(to bottom right, rgba(239, 254, 226, 0.7) 0%, rgba(226, 254, 247, 0.7) 20%, rgba(226, 228, 254, 0.7) 40%, rgba(254, 226, 250, 0.7) 60%, rgba(254, 235, 226, 0.7) 80%, rgba(239, 254, 226, 0.7) 100%);
+  font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+  font-size: 3vw;
+  text-align: center;
+  text-transform: uppercase;
+  color: #131313;
 }
 
-/* line 8, ../sass/colors.scss */
+@media screen and (min-width: 1200px) {
+  /* line 30, ../sass/colors.scss */
+  body {
+    font-size: 36px;
+  }
+}
+/* line 34, ../sass/colors.scss */
+.current {
+  width: 360px;
+  border: 1px solid #7f7f7f;
+  height: 120px;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+
+/* line 39, ../sass/colors.scss */
 .choose {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 100%;
-  max-width: 1200px;
+  width: 1200px;
+  max-width: 100%;
   margin: 0 auto;
+  margin-top: 50px;
 }
 
-/* line 16, ../sass/colors.scss */
+/* line 48, ../sass/colors.scss */
 .color {
-  width: 30%;
-  margin: 10px;
-  padding: 50px;
+  width: 360px;
   border: 1px solid #7f7f7f;
+  height: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
   cursor: pointer;
-  background-color: rgba(255, 255, 255, 0.5);
-  background-color: #fff;
+}
+/* line 56, ../sass/colors.scss */
+.color:hover {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+/* line 61, ../sass/colors.scss */
+.red {
+  background-color: red;
+}
+
+/* line 64, ../sass/colors.scss */
+.green {
+  background-color: #009900;
+  color: #e7e7e7;
+}
+
+/* line 68, ../sass/colors.scss */
+.blue {
+  background-color: blue;
+  color: #e7e7e7;
+}
+
+/* line 72, ../sass/colors.scss */
+.yellow {
+  background-color: yellow;
+}
+
+/* line 75, ../sass/colors.scss */
+.skyblue {
+  background-color: #29b6f6;
+}
+
+/* line 78, ../sass/colors.scss */
+.pink {
+  background-color: #ff99cc;
+}
+
+/* line 81, ../sass/colors.scss */
+.purple {
+  background-color: #ab47bc;
+}
+
+/* line 84, ../sass/colors.scss */
+.brown {
+  background-color: #8b4513;
+  color: #e7e7e7;
+}
+
+/* line 88, ../sass/colors.scss */
+.black {
+  background-color: black;
+  color: #e7e7e7;
+}
+
+/* line 92, ../sass/colors.scss */
+.white {
+  background-color: white;
+}
+
+/* line 95, ../sass/colors.scss */
+.grey {
+  background-color: grey;
+}
+
+/* line 98, ../sass/colors.scss */
+.orange {
+  background-color: #ff6600;
 }
