--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -4,12 +4,18 @@ $textColorLight: #e7e7e7;
 
 @mixin box {
 	width: $maxwidth*0.3;
-	border: 1px solid #7f7f7f;
 	height: $maxwidth*0.1;
+	border: 1px solid #7f7f7f;
+	border-radius: 10px;
 }
 @mixin box-hover {
 	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16),
 				0 3px 6px rgba(0, 0, 0, 0.23);
+}
+@mixin box-text-center {
+	display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 body {
@@ -19,7 +25,7 @@ body {
 	   -moz-user-select: none;
 		-ms-user-select: none;
 	  		user-select: none;
-	background-image: linear-gradient(to bottom right,$gradienColor 0%, adjust-hue($gradienColor, 72deg) 20%,adjust-hue($gradienColor, 144deg) 40%,adjust-hue($gradienColor, 216deg) 60%,adjust-hue($gradienColor, 288deg) 80%,$gradienColor 100%);
+	background-image: linear-gradient(to top left,$gradienColor 0%, adjust-hue($gradienColor, 72deg) 20%,adjust-hue($gradienColor, 144deg) 40%,adjust-hue($gradienColor, 216deg) 60%,adjust-hue($gradienColor, 288deg) 80%,$gradienColor 100%);
 	font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
 	font-size: 3vw;
 	text-align: center;
@@ -47,9 +53,7 @@ body {
 }
 .color {
 	@include box;
-	display: flex;
-    align-items: center;
-    justify-content: center;	
+	@include box-text-center;	
 	margin: 10px;	
 	cursor: pointer;
 
@@ -97,4 +101,43 @@ body {
 }
 .orange {
 	background-color: #ff6600;
+}
+.burgundy {
+	background-color: #800000;
+}
+.message {
+	margin-top: 50px;
+	text-shadow: 2px 2px 0px #fff,
+    			 4px 4px 0px rgba(0, 0, 0, 0.2);
+}
+.next {
+	@include box-text-center;
+	position: relative;
+	width: $maxwidth*0.3/2;
+	height: $maxwidth*0.1/2;
+	margin: 0 auto;
+	margin-top: 50px;
+	background-color: rgba(0, 0, 0, 0.5);
+	color: #fff;
+	font-size: 2vw;
+	opacity: 0;
+	cursor: pointer;
+	pointer-events: none;
+
+	&:after {
+		display: block;
+		position: absolute;
+		left: $maxwidth*0.3/2;
+		content: ' ';
+		width: 0;
+		height: 0;
+		border-top: $maxwidth*0.1/2 solid transparent;
+		border-left: $maxwidth*0.1 solid rgba(0, 0, 0, 0.5);
+		border-bottom: $maxwidth*0.1/2 solid transparent;
+	}
+}
+@media screen and (min-width: 1000px) {
+	.next  {
+		font-size: 30px;
+	}
 }
