--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -7,6 +7,7 @@ $textColorLight: #e7e7e7;
 	height: $maxwidth*0.1;
 	border: 1px solid #7f7f7f;
 	border-radius: 10px;
+	box-shadow: 0 0 15px rgba(0,0,0,0.1);
 }
 @mixin box-hover {
 	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16),
@@ -25,7 +26,8 @@ body {
 	   -moz-user-select: none;
 		-ms-user-select: none;
 	  		user-select: none;
-	background-image: linear-gradient(to top left,$gradienColor 0%, adjust-hue($gradienColor, 72deg) 20%,adjust-hue($gradienColor, 144deg) 40%,adjust-hue($gradienColor, 216deg) 60%,adjust-hue($gradienColor, 288deg) 80%,$gradienColor 100%);
+	background-color: #ecebeb;
+	//background-image: linear-gradient(to top left,$gradienColor 0%, adjust-hue($gradienColor, 72deg) 20%,adjust-hue($gradienColor, 144deg) 40%,adjust-hue($gradienColor, 216deg) 60%,adjust-hue($gradienColor, 288deg) 80%,$gradienColor 100%);
 	font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
 	font-size: 3vw;
 	text-align: center;
@@ -117,7 +119,7 @@ body {
 	height: $maxwidth*0.1/2;
 	margin: 0 auto;
 	margin-top: 50px;
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: rgba(51,51,51,1);;
 	color: #fff;
 	font-size: 2vw;
 	opacity: 0;
@@ -132,7 +134,7 @@ body {
 		width: 0;
 		height: 0;
 		border-top: $maxwidth*0.1/2 solid transparent;
-		border-left: $maxwidth*0.1 solid rgba(0, 0, 0, 0.5);
+		border-left: $maxwidth*0.1/2 solid rgba(51,51,51,1);
 		border-bottom: $maxwidth*0.1/2 solid transparent;
 	}
 }
