--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -142,10 +142,19 @@ body {
 	p {
 		position: absolute;
 		margin: 0;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;		
+		margin-top: 2vw;
 	}
 }
 @media screen and (min-width: 1000px) {
 	.next  {
 		font-size: 30px;
+
+		p {
+			margin-top: 15px;
+		}
 	}
 }
